Updated InterfaceBuilder